--- a/week2/第四章.md
+++ b/week2/第四章.md
@@ -58,7 +58,7 @@ struct TreeNode
 
 一些性质：二叉树的深度：
 
-平均二叉树的深度为O($\sqrt{N}$)；二叉查找树的平均深度为O(log N)。
+平均二叉树的深度为O(<img src="https://latex.codecogs.com/svg.image?\sqrt{N}" title="\sqrt{N}" />)；二叉查找树的平均深度为O(log N)。
 
 当然，其最坏的情况可以达到**O(N-1)**。
 
@@ -332,14 +332,14 @@ SearchTree Delete(ElementType X, SearchTree T) {
 
 #### 4.3.6  平均情况分析
 
-​		令 D(N)是具有N个节点的某树T的**内部路径长（指树中所有节点的深度的和）** ，D(1)=0。一棵N节点树是由一棵 i 节点左子树和一棵（N-i-1）节点右子树以及深度为0的一个根节点组成。其中0$\le$ i <N，D(i)为根节点的左子树的内部路径长。但在原树中，所有节点（指左子树）必须加深一度。同理右子树。因此我们有：
+​		令 D(N)是具有N个节点的某树T的**内部路径长（指树中所有节点的深度的和）** ，D(1)=0。一棵N节点树是由一棵 i 节点左子树和一棵（N-i-1）节点右子树以及深度为0的一个根节点组成。其中0<img src="https://latex.codecogs.com/svg.image?\le" title="\le" /> i <N，D(i)为根节点的左子树的内部路径长。但在原树中，所有节点（指左子树）必须加深一度。同理右子树。因此我们有：
 
-> $D(N)=D(i)+D(N-i-1)+N-1$
+> <img src="https://latex.codecogs.com/svg.image?D(N)=D(i)&plus;D(N-i-1)&plus;N-1" title="D(N)=D(i)+D(N-i-1)+N-1" />
 >
 
-我们再假设平均情况：我们假设所有子树的大小都等可能出现。那么左右子树的内部路径长的平均都为$(1/N)\sum\limits_{j=1}^{N-1}D(j)$。于是
+我们再假设平均情况：我们假设所有子树的大小都等可能出现。那么左右子树的内部路径长的平均都为<img src="https://latex.codecogs.com/svg.image?(1/N)\sum\limits_{j=1}^{N-1}D(j)" title="(1/N)\sum\limits_{j=1}^{N-1}D(j)" />。于是
 
-> $D(N)=\frac{2}{N}[\sum\limits_{j=0}^{N-1}D(j)]+N-1$
+> <img src="https://latex.codecogs.com/svg.image?D(N)=\frac{2}{N}[\sum\limits_{j=0}^{N-1}D(j)]&plus;N-1" title="D(N)=\frac{2}{N}[\sum\limits_{j=0}^{N-1}D(j)]+N-1" />
 >
 
 ### 4.4 AVL 树
