--- a/week3/第五章.md
+++ b/week3/第五章.md
@@ -68,7 +68,7 @@ Index Hash(const char* Key, int TableSize){
 
 这个散列函数涉及关键字中的所有字符，并且一般可以分布得很好。
 
-（它计算$\sum\limits_{i=0}^{KeySize-1} Key[KeySize-i-1] * 32^i$，并将结果限制在适合的范围内）。
+（它计算<img src="https://latex.codecogs.com/svg.image?\sum\limits_{i=0}^{KeySize-1}&space;Key[KeySize-i-1]&space;*&space;32^i" title="\sum\limits_{i=0}^{KeySize-1} Key[KeySize-i-1] * 32^i" />，并将结果限制在适合的范围内）。
 
 ```c
 Index Hash(const char* Key, int TableSize){
@@ -80,11 +80,11 @@ Index Hash(const char* Key, int TableSize){
 }
 ```
 
-程序根据Horner法则计算一个多项式函数。例如：$h_k = k_1 + 27k_2 + 27^2k_3$
+程序根据Horner法则计算一个多项式函数。例如：<img src="https://latex.codecogs.com/svg.image?h_k&space;=&space;k_1&space;&plus;&space;27k_2&space;&plus;&space;27^2k_3&space;" title="h_k = k_1 + 27k_2 + 27^2k_3 " />
 
 该式的另一种计算方式是借助公式：
 
-$h_k=((k_3)\times27+k_2)\times27+k_1$。
+<img src="https://latex.codecogs.com/svg.image?h_k=((k_3)\times27&plus;k_2)\times27&plus;k_1" title="h_k=((k_3)\times27+k_2)\times27+k_1" />。
 
 在计算机中左移5位便是给式子乘上32，所以这个式子中的27我们用
 
@@ -245,7 +245,7 @@ void Display(HashTable H)
 }
 ```
 
-​		我们定义散列表的装填因子（load factor）$\lambda$是散列表中的**元素与散列表大小的比值**。在一次不成功的查找中，遍历的连接数平均为$\lambda$。成功的查找则需要遍历大约$1+(\lambda/2)$个节点。
+​		我们定义散列表的装填因子（load factor）<img src="https://latex.codecogs.com/svg.image?\lambda" title="\lambda" />是散列表中的**元素与散列表大小的比值**。在一次不成功的查找中，遍历的连接数平均为<img src="https://latex.codecogs.com/svg.image?\lambda" title="\lambda" />。成功的查找则需要遍历大约<img src="https://latex.codecogs.com/svg.image?1&plus;(\lambda/2)" title="1+(\lambda/2)" />个节点。
 
 ​		分离链接散列的一般法则是使得表的大小尽量与预料的元素个数差不多。
 
@@ -257,7 +257,7 @@ void Display(HashTable H)
 
 ​		因为所有的数据都要置入表内，所以开放定址散列法所需要的表要比分离链接散列用的表大。
 
-​		一般说来，对开放定址散列算法来说，装填因子应低于$\lambda$=0.5。
+​		一般说来，对开放定址散列算法来说，装填因子应低于<img src="https://latex.codecogs.com/svg.image?\lambda" title="\lambda" />=0.5。
 
 <hr>
 
@@ -265,13 +265,13 @@ void Display(HashTable H)
 
 ​		线性探测法中，F是i的线性函数，典型情形是F(i)=i。即相当于探测每一个单元以查找出一个空单元。
 
-​		经过粗劣的计算，使用线性探测的预期探测次数对于插入和不成功的查找来说大约为$\frac{1}{2}(1+1/(1-\lambda^2))$，而对于成功的查找来说则是$\frac{1}{2}(1+1/(1-\lambda))$。
+​		经过粗劣的计算，使用线性探测的预期探测次数对于插入和不成功的查找来说大约为<img src="https://latex.codecogs.com/svg.image?\frac{1}{2}(1&plus;1/(1-\lambda^2))" title="\frac{1}{2}(1+1/(1-\lambda^2))" />，而对于成功的查找来说则是<img src="https://latex.codecogs.com/svg.image?\frac{1}{2}(1&plus;1/(1-\lambda))" title="\frac{1}{2}(1+1/(1-\lambda))" />。
 
 ​		因为插入和不成功的查找应该是需要相同的探测次数。而成功查找肯定比不成功和插入所花费的平均时间要少。
 
 ![5-11](https://raw.githubusercontent.com/YangInChina/ZhangBoYang-DS/main/week3/Pics/5-11.jpg)
 
-$I(\lambda) = \frac1 \lambda\int_0^\lambda \frac{1}{1-x}dx=\frac{1}{\lambda}ln\frac{1}{\lambda}$
+<img src="https://latex.codecogs.com/svg.image?I(\lambda)&space;=&space;\frac1&space;\lambda\int_0^\lambda&space;\frac{1}{1-x}dx=\frac{1}{\lambda}ln\frac{1}{\lambda}" title="I(\lambda) = \frac1 \lambda\int_0^\lambda \frac{1}{1-x}dx=\frac{1}{\lambda}ln\frac{1}{\lambda}" />
 
 ​		以上是对开放定址法的平均值的计算公式。由此我们可以得知，这个算法显然优于线性探测的平均值。
 
@@ -279,11 +279,11 @@ $I(\lambda) = \frac1 \lambda\int_0^\lambda \frac{1}{1-x}dx=\frac{1}{\lambda}ln\f
 
 ![5-12](https://raw.githubusercontent.com/YangInChina/ZhangBoYang-DS/main/week3/Pics/5-12.jpg)
 
-​		也就是说，当超过一半的表被填满的话，那么线性探测就不能称之为好方法。当$\lambda$=0.5即以下的时候，这是插入的操作差别便不是很大了。
+​		也就是说，当超过一半的表被填满的话，那么线性探测就不能称之为好方法。当<img src="https://latex.codecogs.com/svg.image?\lambda" title="\lambda" />=0.5即以下的时候，这是插入的操作差别便不是很大了。
 
 #### 5.4.2 平方探测法
 
-​		平方探测任务是消除线性探测中一次聚集问题的冲突解决方法。平方探测就是冲突函数为二次函数的探测方法。流行的选择是F(i)=$i^2$。
+​		平方探测任务是消除线性探测中一次聚集问题的冲突解决方法。平方探测就是冲突函数为二次函数的探测方法。流行的选择是F(i)=<img src="https://latex.codecogs.com/svg.image?i^2" title="i^2" />。
 
 ![](https://raw.githubusercontent.com/YangInChina/ZhangBoYang-DS/main/week3/Pics/5-13.jpg)
 
